<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/newName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter Name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter USC Email"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/newName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/newUSCID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter USC ID"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/newUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/newAffiliation"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/newUSCID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/affiliation"
        android:prompt="@string/select_affiliation"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/newAffiliation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/confrimPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Re-enter Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/profilePictureSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/confrimPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/profile_pictures"
        android:prompt="@string/select_profile_picture"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Create Account"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/errorCreateAccountMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invalid input"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/successCreateAccountMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Success!"
        android:textSize="18sp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
